removed adding ad code to url in custom message template

--- a/app/views/application_mailer/custom_message_template.html.erb
+++ b/app/views/application_mailer/custom_message_template.html.erb
@@ -5,7 +5,7 @@
     <title>Custom message</title>
     <meta name="description" content="Custom message template">
     <style type="text/css">
-      .content p {
+      .content p, li {
           color:#455056;
           font-size:15px;
           font-family: 'Rubik',sans-serif;
