--- a/app/views/newsletters/previews/_announcement.html.erb
+++ b/app/views/newsletters/previews/_announcement.html.erb
@@ -8,7 +8,7 @@
     -moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
     box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
   }
-  .content p {
+  .content p, li {
       color:#455056;
       font-size:15px;
       font-family: 'Rubik',sans-serif;
