--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -68,15 +68,17 @@
     <li><a href="https://spotify.com/">https://spotify.com/</a></li>
   </ul>
   <p>
-    Embedding images is an ongoing legal issue however, and The Teen Magazine reserves the right to change this policy depending on what the higher courts say. Read more about the issue here:
-    <ul>
-      <li><a target="_blank" href="https://www.sportico.com/law/analysis/2023/embedded-instagram-posts-not-infringement-1234731168/">https://www.sportico.com/law/analysis/2023/embedded-instagram-posts-not-infringement-1234731168/</a></li>
-    </ul>
+    The Teen Magazine however hides Instagram, TikTok, Twitter, and Spotify embedded posts with a custom message because these companies provide no way to embed their content without 
+    exposing our readers to cookies. Cookies allow these companies to take our readers' personal information without their consent which is a violation of GDPR.
+  </p>
+  <p>
+    <b>Youtube</b> however does let us embed their content without cookies so we don't need to hide the embedded content. Therefore, youtube is the best place to embed content from. To protect our readers, we will automatically take care 
+    of replacing "youtube.com/embed" with "youtube-nocookie.com" to protect our readers' privacy.
   </p>
   <p>
     If you have any questions about the image policy or following the image guidelines, you can post in the <b>Discord chat</b> <a href="https://discord.com/channels/1081601449550688286/1081601450737676474">here</a>.
   </p>
-  <i>Last updated October 19th, 2023</i>
+  <i>Last updated March 2nd, 2024</i>
   <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
